-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0
-
-
719fa10c8219537187f2e3c63eacdf44bd76d410 (qt/qtdeclarative/dev) f8b414f23ee085d9fa1089a98da6a117bc5e50c5 (qt/qtdeclarative/5.12) d4ad8c6f6a470d303622abd82dbbc3203a42bfed (qt/qtdeclarative/6.1) 64c22f1691 (qt/tqtc-qtdeclarative/5.15-opensource)
My iOS app built with Qt 5.10.0 got rejected by App Store:
Non-public API usage:
- The app references non-public symbols in {app name}: __ZN3WTF8pageSizeEv
I make a minimum project to reproduce this problem, please ref attached files.
| For Gerrit Dashboard: QTBUG-69577 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 348061,3 | MASM: Put pageSize into an inline namespace | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 348138,2 | MASM: Put pageSize into an inline namespace | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 348140,2 | MASM: Put pageSize into an inline namespace | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 348141,2 | MASM: Put pageSize into an inline namespace | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |