MASM: Put pageSize into an inline namespace

Apple errorneously detects pagesize as belonging to their private API.
Avoid this by putting the functions into an inline namespace to change
their mangling.

Fixes: QTBUG-69577
Change-Id: I061febdc6f961fa8a6e1d43de4154a8e26b04f27
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 719fa10c8219537187f2e3c63eacdf44bd76d410)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>